--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/native-stack": "^7.8.0",
     "expo": "~54.0.0",
     "expo-file-system": "~19.0.19",
+    "expo-font": "~14.0.9",
     "expo-intent-launcher": "~13.0.7",
     "expo-speech-recognition": "^3.0.1",
     "expo-status-bar": "~3.0.8",
@@ -27,8 +27,7 @@
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
-    "react-native-vosk": "^2.1.7",
-    "react-native-zip-archive": "^7.0.2"
+    "react-native-vosk": "^2.1.7"
   },
   "devDependencies": {
     "@react-native-community/cli": "^20.0.2",
