--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/native-stack": "^7.8.0",
     "expo": "~54.0.0",
+    "expo-build-properties": "~1.0.9",
     "expo-file-system": "~19.0.19",
     "expo-font": "~14.0.9",
     "expo-intent-launcher": "~13.0.7",
