--- a/app.json
+++ b/app.json
@@ -27,7 +27,8 @@
             "edgeToEdgeEnabled": true,
             "predictiveBackGestureEnabled": false,
             "package": "com.anonymous.llmmar",
-            "permissions": ["RECORD_AUDIO", "INTERNET", "ACCESS_NETWORK_STATE"]
+            "permissions": ["RECORD_AUDIO", "INTERNET", "ACCESS_NETWORK_STATE"],
+            "softwareKeyboardLayoutMode": "resize"
         },
         "web": {
             "favicon": "./assets/favicon.png"
